Login & First methods of User Controller
