# blackjack-api/storage/api-docs/api-docs.json
@@ -2,10 +2,7 @@
     "openapi": "3.0.0",
     "info": {
         "title": "Blackjack API",
-        "description": "This is a simple Blackjack API.",
-        "contact": {
-            "email": "your-email@example.com"
-        },
+        "description": "This is a simple Blackjack API. For more information, please visit the developer's portfolio at [Ignacio Albiol's Portfolio](https://ignacioalbiol.tech/).",
         "version": "1.0.0"
     },
     "servers": [
@@ -15,12 +12,164 @@
         }
     ],
     "paths": {
-        "/players": {
+        "/login": {
             "post": {
                 "tags": [
-                    "Auth"
+                    "Login"
                 ],
-                "summary": "Register player",
+                "summary": "Log in a registered player",
+                "description": "This is the endpoint to log in a registered player.",
+                "operationId": "loginPlayer",
+                "requestBody": {
+                    "description": "Player login data",
+                    "required": true,
+                    "content": {
+                        "application/json": {
+                            "schema": {
+                                "required": [
+                                    "email",
+                                    "password"
+                                ],
+                                "properties": {
+                                    "email": {
+                                        "type": "string",
+                                        "format": "email",
+                                        "example": "test@mail.com"
+                                    },
+                                    "password": {
+                                        "type": "string",
+                                        "format": "password",
+                                        "example": "123456789"
+                                    }
+                                },
+                                "type": "object"
+                            }
+                        }
+                    }
+                },
+                "responses": {
+                    "200": {
+                        "description": "Player logged in successfully",
+                        "content": {
+                            "application/json": {
+                                "schema": {
+                                    "properties": {
+                                        "message": {
+                                            "type": "string",
+                                            "example": "User logged in successfully"
+                                        },
+                                        "token": {
+                                            "type": "string",
+                                            "example": "token"
+                                        }
+                                    },
+                                    "type": "object"
+                                }
+                            }
+                        }
+                    },
+                    "401": {
+                        "description": "Invalid login details",
+                        "content": {
+                            "application/json": {
+                                "schema": {
+                                    "properties": {
+                                        "message": {
+                                            "type": "string",
+                                            "example": "Invalid login details"
+                                        }
+                                    },
+                                    "type": "object"
+                                }
+                            }
+                        }
+                    }
+                }
+            }
+        },
+        "/players": {
+            "get": {
+                "tags": [
+                    "Users"
+                ],
+                "summary": "Show all players & their average win percentages",
+                "description": "This endpoint returns all players and their average win percentages. Only authenticated users with the appropriate permissions can access this endpoint.",
+                "operationId": "getAllPlayers",
+                "responses": {
+                    "200": {
+                        "description": "Successful operation",
+                        "content": {
+                            "application/json": {
+                                "schema": {
+                                    "properties": {
+                                        "total_wins_average": {
+                                            "type": "number",
+                                            "example": "0.52"
+                                        },
+                                        "total_losses_average": {
+                                            "type": "number",
+                                            "example": "0.30"
+                                        },
+                                        "total_ties_average": {
+                                            "type": "number",
+                                            "example": "0.18"
+                                        },
+                                        "user_details": {
+                                            "type": "array",
+                                            "items": {
+                                                "$ref": "#/components/schemas/User"
+                                            }
+                                        }
+                                    },
+                                    "type": "object"
+                                }
+                            }
+                        }
+                    },
+                    "401": {
+                        "description": "Unauthorized",
+                        "content": {
+                            "application/json": {
+                                "schema": {
+                                    "properties": {
+                                        "message": {
+                                            "type": "string",
+                                            "example": "Unauthorized"
+                                        }
+                                    },
+                                    "type": "object"
+                                }
+                            }
+                        }
+                    },
+                    "403": {
+                        "description": "Forbidden",
+                        "content": {
+                            "application/json": {
+                                "schema": {
+                                    "properties": {
+                                        "message": {
+                                            "type": "string",
+                                            "example": "Forbidden"
+                                        }
+                                    },
+                                    "type": "object"
+                                }
+                            }
+                        }
+                    }
+                },
+                "security": [
+                    {
+                        "bearerAuth": []
+                    }
+                ]
+            },
+            "post": {
+                "tags": [
+                    "Register"
+                ],
+                "summary": "Register a new player",
                 "description": "This is the endpoint to create and register a new player.",
                 "operationId": "registerPlayer",
                 "requestBody": {
@@ -49,16 +198,193 @@
                 },
                 "responses": {
                     "201": {
-                        "description": "Player created successfully"
+                        "description": "Player created successfully",
+                        "content": {
+                            "application/json": {
+                                "schema": {
+                                    "properties": {
+                                        "message": {
+                                            "type": "string",
+                                            "example": "Player created successfully"
+                                        },
+                                        "uuid": {
+                                            "type": "string",
+                                            "example": "3fa85f64-5717-4562-b3fc-2c963f66afa6"
+                                        }
+                                    },
+                                    "type": "object"
+                                }
+                            }
+                        }
                     }
                 }
+            }
+        },
+        "/players/{id}": {
+            "put": {
+                "tags": [
+                    "Users"
+                ],
+                "summary": "Update nickname for player",
+                "description": "This endpoint updates the nickname for a player. Only the player themselves can access this endpoint.",
+                "operationId": "updatePlayer",
+                "parameters": [
+                    {
+                        "name": "id",
+                        "in": "path",
+                        "description": "UUID of the user to update",
+                        "required": true,
+                        "schema": {
+                            "type": "string"
+                        }
+                    }
+                ],
+                "requestBody": {
+                    "description": "Nickname to update",
+                    "required": true,
+                    "content": {
+                        "application/json": {
+                            "schema": {
+                                "properties": {
+                                    "nickname": {
+                                        "type": "string",
+                                        "example": "NewNickname"
+                                    }
+                                },
+                                "type": "object"
+                            }
+                        }
+                    }
+                },
+                "responses": {
+                    "200": {
+                        "description": "Successful operation",
+                        "content": {
+                            "application/json": {
+                                "schema": {
+                                    "properties": {
+                                        "message": {
+                                            "type": "string",
+                                            "example": "Nickname modified successfully"
+                                        },
+                                        "new nickname": {
+                                            "type": "string",
+                                            "example": "NewNickname"
+                                        }
+                                    },
+                                    "type": "object"
+                                }
+                            }
+                        }
+                    },
+                    "401": {
+                        "description": "Unauthorized",
+                        "content": {
+                            "application/json": {
+                                "schema": {
+                                    "properties": {
+                                        "message": {
+                                            "type": "string",
+                                            "example": "Unauthorized"
+                                        }
+                                    },
+                                    "type": "object"
+                                }
+                            }
+                        }
+                    },
+                    "403": {
+                        "description": "Forbidden",
+                        "content": {
+                            "application/json": {
+                                "schema": {
+                                    "properties": {
+                                        "message": {
+                                            "type": "string",
+                                            "example": "Forbidden"
+                                        }
+                                    },
+                                    "type": "object"
+                                }
+                            }
+                        }
+                    },
+                    "404": {
+                        "description": "Not Found",
+                        "content": {
+                            "application/json": {
+                                "schema": {
+                                    "properties": {
+                                        "message": {
+                                            "type": "string",
+                                            "example": "User not found"
+                                        }
+                                    },
+                                    "type": "object"
+                                }
+                            }
+                        }
+                    }
+                },
+                "security": [
+                    {
+                        "bearerAuth": []
+                    }
+                ]
+            }
+        }
+    },
+    "components": {
+        "schemas": {
+            "User": {
+                "properties": {
+                    "uuid": {
+                        "description": "The unique identifier of the user",
+                        "type": "string"
+                    },
+                    "nickname": {
+                        "description": "The nickname of the user",
+                        "type": "string"
+                    },
+                    "email": {
+                        "description": "The email of the user",
+                        "type": "string"
+                    },
+                    "wins": {
+                        "description": "The number of wins of the user",
+                        "type": "integer"
+                    },
+                    "losses": {
+                        "description": "The number of losses of the user",
+                        "type": "integer"
+                    },
+                    "ties": {
+                        "description": "The number of ties of the user",
+                        "type": "integer"
+                    }
+                },
+                "type": "object"
+            }
+        },
+        "securitySchemes": {
+            "bearerAuth": {
+                "type": "http",
+                "description": "Bearer token authentication",
+                "name": "Bearer",
+                "in": "header",
+                "bearerFormat": "JWT",
+                "scheme": "bearer"
             }
         }
     },
     "tags": [
         {
-            "name": "Auth",
-            "description": "API Endpoints for Authentication"
+            "name": "Register",
+            "description": "API Endpoints for Registering Users"
+        },
+        {
+            "name": "Login",
+            "description": "API Endpoints for Logging in Users"
         },
         {
             "name": "Users",
